--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,4 @@
+# set path of java, it will tell where java is.
+# the path may differ for you, find where java is & copy
+# that path here
 org.gradle.java.home = /usr/lib/jvm/java-17-openjdk-amd64
