--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,11 @@
+//list of plugins that may be required for sub-projects
 plugins {
     id 'com.android.application' version '7.2.0' apply false
     id 'com.android.library' version '7.2.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
 }
 
+//gradle task to clean the build directory
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
